Process Hacker

1.7
 * NEW/IMPROVED:
   * New settings system - settings can now be saved anywhere

1.6
 * NEW/IMPROVED:
   * #2817429 - "Add Port and IP Address columns to Network tab"
   * #2845829 - "System uptime"
   * #2853452 - "Find handles window: Minor usability improvements"
   * KProcessHacker support for Windows Server 2003
   * Update system
   * Network tools: ping, traceroute and whois
   * Object security editor
   * Displays IPv6 network connections
   * VirusTotal uploader
   * Two new terminator tests: W1 (send WM_DESTROY messages) and 
     W2 (send WM_QUIT messages)
   * Wait chain analysis
   * Mutant owner information
   * Elevation prompt when attempting to view process properties
   * All list views now have sort arrows
   * Network list now displays process tooltips
   * Enabled DLL injection into processes from other sessions
   * Decreased memory and CPU usage
   * Added a glossary to Help
   * Configurable elevation prompts
   * Better Windows 7 user interface support
   * Exception reporting from within Process Hacker
   * Slimmer thread call stack window
 * FIXED:
   * #2820170 - "System.ArgumentOutOfRangeException in network list"
   * #2845427 - "Indicator integer overflow"
   * #2847691 - "Apply button bug"
   * #2849052 - "not defined by current visual style"
   * #2863305 - "Unhandled exception in comparer"
   * Critical KProcessHacker denial-of-service security issues
   * Crashes within the process tree model
   * Incorrect menu items for System threads
   * Crash when viewing error details in the event 
     of a corrupt configuration file
   * Notification icons were fixed at 16x16 size
   * Sort order for the relative start time column
   * Incorrect process priority class display
   * Commit and Physical Memory History icon colors
   * Packed file detection, PE reader
   * Performance history buffer problems
 * REMOVED:
   * Messages in the main window's status bar

1.5
 * NEW/IMPROVED: