@@ -29,7 +29,6 @@
         private void InitializeComponent()
         {
             this.listColumns = new System.Windows.Forms.ListView();
-            this.columnColumn = new System.Windows.Forms.ColumnHeader();
             this.buttonCancel = new System.Windows.Forms.Button();
             this.buttonOK = new System.Windows.Forms.Button();
             this.SuspendLayout();
@@ -40,29 +39,22 @@
                         | System.Windows.Forms.AnchorStyles.Left)
                         | System.Windows.Forms.AnchorStyles.Right)));
             this.listColumns.CheckBoxes = true;
-            this.listColumns.Columns.AddRange(new System.Windows.Forms.ColumnHeader[] {
-            this.columnColumn});
             this.listColumns.FullRowSelect = true;
             this.listColumns.HeaderStyle = System.Windows.Forms.ColumnHeaderStyle.None;
             this.listColumns.Location = new System.Drawing.Point(12, 12);
             this.listColumns.MultiSelect = false;
             this.listColumns.Name = "listColumns";
             this.listColumns.ShowItemToolTips = true;
-            this.listColumns.Size = new System.Drawing.Size(368, 261);
+            this.listColumns.Size = new System.Drawing.Size(440, 261);
             this.listColumns.TabIndex = 0;
             this.listColumns.UseCompatibleStateImageBehavior = false;
-            this.listColumns.View = System.Windows.Forms.View.Details;
-            // 
-            // columnColumn
-            // 
-            this.columnColumn.Text = "Column";
-            this.columnColumn.Width = 200;
+            this.listColumns.View = System.Windows.Forms.View.List;
             // 
             // buttonCancel
             // 
             this.buttonCancel.Anchor = ((System.Windows.Forms.AnchorStyles)((System.Windows.Forms.AnchorStyles.Bottom | System.Windows.Forms.AnchorStyles.Right)));
             this.buttonCancel.FlatStyle = System.Windows.Forms.FlatStyle.System;
-            this.buttonCancel.Location = new System.Drawing.Point(305, 279);
+            this.buttonCancel.Location = new System.Drawing.Point(377, 279);
             this.buttonCancel.Name = "buttonCancel";
             this.buttonCancel.Size = new System.Drawing.Size(75, 23);
             this.buttonCancel.TabIndex = 2;
@@ -74,7 +66,7 @@
             // 
             this.buttonOK.Anchor = ((System.Windows.Forms.AnchorStyles)((System.Windows.Forms.AnchorStyles.Bottom | System.Windows.Forms.AnchorStyles.Right)));
             this.buttonOK.FlatStyle = System.Windows.Forms.FlatStyle.System;
-            this.buttonOK.Location = new System.Drawing.Point(224, 279);
+            this.buttonOK.Location = new System.Drawing.Point(296, 279);
             this.buttonOK.Name = "buttonOK";
             this.buttonOK.Size = new System.Drawing.Size(75, 23);
             this.buttonOK.TabIndex = 1;
@@ -87,7 +79,7 @@
             this.AcceptButton = this.buttonOK;
             this.AutoScaleDimensions = new System.Drawing.SizeF(6F, 13F);
             this.AutoScaleMode = System.Windows.Forms.AutoScaleMode.Font;
-            this.ClientSize = new System.Drawing.Size(392, 314);
+            this.ClientSize = new System.Drawing.Size(464, 314);
             this.Controls.Add(this.buttonOK);
             this.Controls.Add(this.buttonCancel);
             this.Controls.Add(this.listColumns);
@@ -106,7 +98,6 @@
         #endregion
 
         private System.Windows.Forms.ListView listColumns;
-        private System.Windows.Forms.ColumnHeader columnColumn;
         private System.Windows.Forms.Button buttonCancel;
         private System.Windows.Forms.Button buttonOK;
 
